# RAG

./: LICENSE.txt  README.md  build_env.sh  requirements.txt  setup.cfg
data/: csv_agileoutgoing_C_London.csv  csv_gastracker_A_Eastern_England.csv  csv_gastracker_B_East_Midlands.csv  csv_gastracker_C_London.csv  csv_gastracker_D_Merseyside_and_Northern_Wales.csv  csv_gastracker_E_West_Midlands.csv  csv_gastracker_F_North_Eastern_England.csv  csv_gastracker_G_North_Western_England.csv  csv_gastracker_H_Southern_England.csv  csv_gastracker_J_South_Eastern_England.csv  csv_gastracker_K_Southern_Wales.csv  csv_gastracker_L_South_Western_England.csv  csv_gastracker_M_Yorkshire.csv  csv_gastracker_N_Southern_Scotland.csv  csv_gastracker_P_Northern_Scotland.csv  csv_tracker_A_Eastern_England.csv  csv_tracker_B_East_Midlands.csv  csv_tracker_C_London.csv  csv_tracker_D_Merseyside_and_Northern_Wales.csv  csv_tracker_E_West_Midlands.csv  csv_tracker_F_North_Eastern_England.csv  csv_tracker_G_North_Western_England.csv  csv_tracker_H_Southern_England.csv  csv_tracker_J_South_Eastern_England.csv  csv_tracker_K_Southern_Wales.csv  csv_tracker_L_South_Western_England.csv  csv_tracker_M_Yorkshire.csv  csv_tracker_N_Southern_Scotland.csv  csv_tracker_P_Northern_Scotland.csv
data/raw_data/: csv_agileoutgoing_C_London.csv  csv_gastracker_A_Eastern_England.csv  csv_gastracker_B_East_Midlands.csv  csv_gastracker_C_London.csv  (+26 more)
doc/: conf.py
rag/: data.py  model.py  optim.py  rag.py  user.py
test/: kill_me.py  params.txt  test.py  test1.json  test1.txt  test2.json  test_params.json
