[metadata]
name = rag
author = François Michelon
author_email = francois.michelon@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = LLM interface between user, data and optimization model for demand side flexibility
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    numpy
    numba
    matplotlib
    # list of external dependencies

[options.entry_points]
console_scripts =
    data=rag.data:main
    model=rag.model:main
    optim=rag.optim:main

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS